2005-07-20  Derek Price  <derek@ximbiot.com>

	* cvs_acls.html, cvs_acls.in, log_accum.in:
	s/cvshome.org/nongnu.org.etc.../.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* clmerge.in, cln_hist.in, commit_prep.in, cvs2vendor.sh, cvs_acls.in,
	debug_check_log.sh, descend.sh, log.in, log_accum.in, mfpipe.in,
	rcs-to-cvs.sh, rcs2log.sh, rcs2sccs.sh, rcslock.in,sandbox_status.sh,
	sccs2rcs.in: Add copyright notices.

2005-07-11  Derek Price  <derek@ximbiot.com>

	* clmerge.in, cln_hist.in, commit_prep.in, cvs2vendor.sh, cvs_acls.in,
	debug_check_log.sh, descend.sh, log.in, log_accum.in, mfpipe.in,
	rcs-to-cvs.sh, rcs2log.sh, rcs2sccs.sh, rcslock.in, sandbox_status.sh,
	sccs2rcs.in: Update license notices.

2005-06-27  Derek Price  <derek@ximbiot.com>

	* pvcs2rcs.pl (bin_ext): Add some new extensions.  Reorganize slightly.
	(usage, error_count): Repaginate.
	(help): Add cvs-module option.  Repaginate.
	(options): Add cvs-module option.
	(execdir): Keep track of CVS module dir.  Add quotes around file names
	to handle spaces when passed to shell.  Parse "Description" fields
	correctly.  Try not to abort when a log line matches /^Rev [\d.]+/.
	Handle file locks in CVS module dir and moving archives into CVS module
	dir when done.  Add a few debug prints.  Branch when a 2.*, etc.
	revision is found since in PVCS, commits to 1.* and 2.* are treated as
	different branches.
	(pvcs_to_rcs_rev_number): Ignore 1.*, 2.*, etc., to be handled later.

2005-04-14  Derek Price  <derek@ximbiot.com>

	* commit_prep.in, cvs_acls.in, log.in, log_accum.in, mfpipe.in,
	rcslock.in: Enable taint checking and comment.  This closes cvshome.org
	Issue #224.

2005-04-08  Derek Price  <derek@ximbiot.com>

	* README: Correct my email address.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerated.

2005-03-11  Mark D. Baushke  <mdb@cvshome.org>

	* validate_repo.in (get_history): Allow whitespace in the author
	field. Avoid uninitialized hash.